--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
 
             <div class="schedule-footer">
                 <p class="footer-note">
-                    スケジュールは変更になる可能性があります。最新情報は<a href="#sns">各SNSの公式アカウント</a>をご確認ください。<br>
+                    スケジュールは変更になる可能性があります。最新情報は各SNSの公式アカウントをご確認ください。<br>
                     体験入部・見学は、上記日程以外も随時受け付けています。お気軽に<strong>公式XのDM</strong>までご連絡ください！
                 </p>
             </div>
