--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
 </head>
 <body>
-    <header>  
+    <img src="statics/img/top_banner.webp" alt="EAGLES Team Banner" class="top-banner-image">
+    <header>
         <div class="logo">
             <a href="#">
                 <img src="statics/img/team_logo_eagles.webp" alt="EAGLES Team Logo" class="header-logo">
@@ -34,8 +35,9 @@
 
     <section class="hero">
         <div class="hero-content">
+            <h1>Rise with</h1>
             <h1>EAGLES</h1>
-            <p class="tagline">Rise Together. Win Together.</p>
+            <!-- <p class="tagline">Rise Together. Win Together.</p> -->
             <div class="cta-buttons">
                 <a href="#join" class="btn-primary">新入部員募集中</a>
                 <a href="#about" class="btn-secondary">チームを知る</a>
